[gd_scene load_steps=6 format=3 uid="uid://dos7dlsh6ikrg"]

[ext_resource type="Script" path="res://scripts/main_menu.gd" id="1_gds5f"]
[ext_resource type="VideoStream" path="res://assets/others/main_menu1.ogv" id="2_iq12j"]
[ext_resource type="AudioStream" uid="uid://cdc3cscrmw0nf" path="res://assets/sound/music/kim-lightyear-legends-109307.mp3" id="3_8xo1g"]
[ext_resource type="FontFile" uid="uid://da3062jus3pln" path="res://assets/fonts/Crang.ttf" id="4_14pno"]
[ext_resource type="FontFile" uid="uid://4c2y0qlocwh0" path="res://assets/fonts/upheavtt.ttf" id="5_0i0d2"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_gds5f")

[node name="Control" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="VideoStreamPlayer" type="VideoStreamPlayer" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
stream = ExtResource("2_iq12j")
autoplay = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_8xo1g")
volume_db = -5.0

[node name="TitleText" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -660.0
offset_top = 91.0
offset_right = 660.0
offset_bottom = 195.0
grow_horizontal = 2
theme_type_variation = &"HeaderLarge"
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_14pno")
theme_override_font_sizes/font_size = 100
text = "Teamprojekt++   2023"

[node name="VersionNumber" type="Label" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -107.0
offset_top = -32.0
offset_right = -8.0
offset_bottom = -6.0
grow_horizontal = 0
grow_vertical = 0
text = "Version 0.1.3"

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -8274.0
offset_top = -2388.5
offset_right = -566.0
offset_bottom = 2388.5
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.05, 0.05)
pivot_offset = Vector2(8500, 2400)

[node name="Main" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
alignment = 1

[node name="Play" type="Button" parent="MarginContainer/Main"]
layout_mode = 2
theme_override_fonts/font = ExtResource("5_0i0d2")
theme_override_font_sizes/font_size = 1000
text = "Starten"

[node name="Options" type="Button" parent="MarginContainer/Main"]
layout_mode = 2
theme_override_fonts/font = ExtResource("5_0i0d2")
theme_override_font_sizes/font_size = 1000
text = "Einstellungen"

[node name="Credits" type="Button" parent="MarginContainer/Main"]
layout_mode = 2
theme_override_fonts/font = ExtResource("5_0i0d2")
theme_override_font_sizes/font_size = 1000
text = "Credits"

[node name="Quit" type="Button" parent="MarginContainer/Main"]
layout_mode = 2
theme_override_fonts/font = ExtResource("5_0i0d2")
theme_override_font_sizes/font_size = 1000
text = "Beenden"

[node name="Options" type="VBoxContainer" parent="MarginContainer"]
visible = false
layout_mode = 2

[node name="Volume" type="Button" parent="MarginContainer/Options"]
layout_mode = 2
text = "Lautstärke"

[node name="Back" type="Button" parent="MarginContainer/Options"]
layout_mode = 2
text = "Zurück"

[node name="Credits" type="VBoxContainer" parent="MarginContainer"]
visible = false
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/Credits"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Main Menu Music:
Kim Lightyear
from Pixabay"

[node name="CreditBack" type="Button" parent="MarginContainer/Credits"]
layout_mode = 2
text = "Zurück"

[connection signal="pressed" from="MarginContainer/Main/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="MarginContainer/Main/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="MarginContainer/Main/Credits" to="." method="_on_credits_pressed"]
[connection signal="pressed" from="MarginContainer/Main/Quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="MarginContainer/Options/Volume" to="." method="_on_volume_pressed"]
[connection signal="pressed" from="MarginContainer/Options/Back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="MarginContainer/Credits/CreditBack" to="." method="_on_credit_back_pressed"]
